--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    tags:
-      - 'v[0-9]*'
+    branches:
+    - main
 
 env:
   GHCR_IMAGE: ghcr.io/${{ github.repository }}
@@ -23,47 +23,47 @@ jobs:
           version: ${{ github.ref_name }}
           lenient: false
 
-  create-release:
-    name: Create Release
-    runs-on: ubuntu-latest
-    needs: check-version
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Create release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release create \
-            "$GITHUB_REF_NAME" \
-            ${{ needs.check-version.outputs.prerelease == 'true' && '--prerelease' || '' }} \
-            --notes "Directus $GITHUB_REF_NAME"
-
-  publish-npm:
-    name: Publish to NPM
-    runs-on: ubuntu-latest
-    needs: check-version
-    permissions:
-      id-token: write
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Prepare
-        uses: ./.github/actions/prepare
-        with:
-          registry: https://registry.npmjs.org
-
-      - name: Publish packages to NPM
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-          NPM_CONFIG_PROVENANCE: true
-        run: |
-          pnpm --recursive publish \
-            --access=public \
-            --no-git-checks \
-            --tag ${{ needs.check-version.outputs.prerelease == 'true' && 'canary'  || 'latest' }}
+#  create-release:
+#    name: Create Release
+#    runs-on: ubuntu-latest
+#    needs: check-version
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: Create release
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        run: |
+#          gh release create \
+#            "$GITHUB_REF_NAME" \
+#            ${{ needs.check-version.outputs.prerelease == 'true' && '--prerelease' || '' }} \
+#            --notes "Directus $GITHUB_REF_NAME"
+#
+#  publish-npm:
+#    name: Publish to NPM
+#    runs-on: ubuntu-latest
+#    needs: check-version
+#    permissions:
+#      id-token: write
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4
+#
+#      - name: Prepare
+#        uses: ./.github/actions/prepare
+#        with:
+#          registry: https://registry.npmjs.org
+#
+#      - name: Publish packages to NPM
+#        env:
+#          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+#          NPM_CONFIG_PROVENANCE: true
+#        run: |
+#          pnpm --recursive publish \
+#            --access=public \
+#            --no-git-checks \
+#            --tag ${{ needs.check-version.outputs.prerelease == 'true' && 'canary'  || 'latest' }}
 
   build-images:
     name: Build Images
@@ -93,7 +93,7 @@ jobs:
         with:
           images: |
             ${{ env.DOCKERHUB_IMAGE }}
-            ${{ env.GHCR_IMAGE }}
+     #       ${{ env.GHCR_IMAGE }}
           tags: |
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -107,13 +107,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        if: env.GHCR_IMAGE
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      #- name: Login to GHCR
+      #  uses: docker/login-action@v3
+      #  if: env.GHCR_IMAGE
+      #  with:
+      #    registry: ghcr.io
+      #    username: ${{ github.actor }}
+      #    password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v5
