--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,12 +92,9 @@ jobs:
         with:
           images: |
             ${{ env.DOCKERHUB_IMAGE }}
-     #       ${{ env.GHCR_IMAGE }}
           tags: |
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,value=canary,enable=${{ needs.check-version.outputs.prerelease }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/directus:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/directus:${{ github.sha }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
